src/agent/cli/product/tui_app/src/bottom_pane/request_user_input/snapshots/lha_cli__product__tui_app__bottom_pane__request_user_input__tests__request_user_input_wrapped_options.snap
---
source: src/agent/cli/src/../product/tui_app/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                              
  Question 1/1 (1 unanswered)                                                                                 
  Choose the next step for this task.                                                                         
                                                                                                              
  › 1. Discuss a code change  Walk through a plan, then implement it together with careful checks.            
    2. Run targeted tests     Pick the most relevant crate and validate the current behavior first.           
    3. Review the diff        Summarize the changes and highlight the most important risks and gaps.          
                                                                                                              
  tab to add notes | enter to submit answer | esc to interrupt
